--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,macos,visualstudiocode,react
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,visualstudiocode,react
+# Created by https://www.toptal.com/developers/gitignore/api/windows,macos,visualstudiocode,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,visualstudiocode,java
+
+### Java ###
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
 
 ### macOS ###
 # General
@@ -33,22 +59,6 @@ Temporary Items
 ### macOS Patch ###
 # iCloud generated files
 *.icloud
-
-### react ###
-.DS_*
-*.log
-logs
-**/*.backup.*
-**/*.back.*
-
-node_modules
-bower_components
-
-*.sublime*
-
-psd
-thumb
-sketch
 
 ### VisualStudioCode ###
 .vscode/*
@@ -95,4 +105,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,macos,visualstudiocode,react
+# End of https://www.toptal.com/developers/gitignore/api/windows,macos,visualstudiocode,java
